@@ -1276,18 +1276,22 @@ void R_DrawName (vec3_t origin, const char *Name, int Red)
 				Draw_Character (u, v, 143);	//shield
 			else
 				Draw_Character (u, v, 130);	//crown
-			Draw_RedString(u+8, v, Name);
+			Draw_RedString (u+8, v, Name);
 		}
 		else if (!Red)
 		{
 			Draw_Character (u, v, 144);	//sword
 			Draw_String (u+8, v, Name);
 		}
-		else	//neither att or def
+		else	//neither att nor def
+		{
 			Draw_String (u+8, v, Name);
+		}
 	}
 	else
+	{
 		Draw_String (u, v, Name);
+	}
 }
 
 
